Started fixing css to make dark mode work OK

--- a/styles/Category.module.css
+++ b/styles/Category.module.css
@@ -22,7 +22,7 @@
 }
 
 .cat_row {
-    color: darkblue;
+    /* color: darkblue; */
 }
 
 .cat_row:hover {
